apps/policy-bot/base/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: policy-bot
  namespace: policy-bot
spec:
  replicas: 1
  selector:
    matchLabels:
      app: policy-bot
  template:
    metadata:
      labels:
        app: policy-bot
    spec:
      containers:
      - name: policy-bot
        image: palantirtechnologies/policy-bot:1.27.3
        imagePullPolicy: Always
        ports:
        - containerPort: 8080
        volumeMounts:
        - name: config-map
          mountPath: /secrets/
      volumes:
      - name: config-map
        configMap:
          name: policy-bot-config
