apps/policy-bot/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: policy-bot
  namespace: policy-bot
spec:
  ports:
  - port: 8080
    targetPort: 8080
  selector:
    app: policy-bot
