apps/policy-bot/base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: policy-bot-ingress
  namespace: policy-bot
  labels:
    app: policy-bot
spec:
  ingressClassName: nginx
  rules:
  - host: policy.infra.adhp.dev
    http:
      paths:
      - backend:
          service:
            name: policy-bot
            port:
              number: 8080
        path: /
        pathType: Prefix
  tls:
  - hosts:
    - policy.infra.adhp.dev
    secretName: policy-infra-adhp-dev-tls
